--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "09_practice",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://gojogourav.github.io/Currency-Converter",
   "type": "module",
   "scripts": {
     "dev": "vite",
